[project]
name = "ai-agent-without-framework"
version = "0.1.0"
description = "Sample code to bulid AI agent without framework."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=7.2.1",
    "openai>=1.59.8",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.2",
]
